--- a/FileSystem.vcxproj
+++ b/FileSystem.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="User.hpp" />
+    <ClInclude Include="UserControler.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Directory.cpp" />
@@ -169,6 +170,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="UserControler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
